overlap issues resolved. adjusted image sizing and spacing between main front page sections

--- a/css/main.scss
+++ b/css/main.scss
@@ -42,6 +42,18 @@ $icon-font-path: "/node_modules/bootstrap-sass/assets/fonts/bootstrap/";
 
 //.fifty{ height: 55vh; position: relative; display: subgrid; width:100%; text-align: center;}
 
+.hugespacer {
+  height: 50px;
+}
+.bigspacer {
+  height: 20px;
+}
+.spacer {
+  height: 10px;
+}
+.smallspacer {
+  height: 5px;
+}
 
 
 .fixOverlayDiv{
